--- a/advanced.html
+++ b/advanced.html
@@ -13,6 +13,9 @@
             align-items: center;
             height: 100vh;
         }
+        h1{
+            color: #282727;
+        }
         .top-links {
             position: absolute;
             top: 10px;
@@ -25,7 +28,7 @@
         }
         .top-links a:hover {
             color: #0f59d1;
-            border-radius: 10px;
+            border-radius: 4px;
             border:1px solid;
             padding: 8px;
         }
@@ -44,7 +47,7 @@
             background-color: #1a73e8;
             color: white;
             border: none;
-            border-radius: 10px;
+            border-radius: 4px;
             cursor: pointer;
             display: flex;
         
