--- a/images.html
+++ b/images.html
@@ -15,6 +15,9 @@
             justify-content: center;
             align-items: center;
         }
+        h1{
+            color: #282727;
+        }
         .top-links {
             position: absolute;
             top: 10px;
@@ -27,7 +30,7 @@
         }
         .top-links a:hover {
             color: #0f59d1;
-            border-radius: 10px;
+            border-radius: 4px;
             border:1px solid;
             padding: 8px;
         }
