--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
             justify-content: center;
             align-items: center;
         }
+        h1{
+            color: #282727;
+        }
         .top-links {
             position: absolute;
             top: 10px;
@@ -28,7 +31,7 @@
         }
         .top-links a:hover {
             color: #0f59d1;
-            border-radius: 10px;
+            border-radius: 4px;
             border:1px solid;
             padding: 8px;
         }
@@ -46,7 +49,7 @@
             border: none;
             background-color: #1a73e8;
             color: white;
-            border-radius: 10px;
+            border-radius: 4px;
             cursor: pointer;
             display: inline-block;
             margin-right: 10px; 
