--- a/project 0/index.html
+++ b/project 0/index.html
@@ -1,12 +1,77 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <title>Search</title>
-    </head>
-    <body>
-        <form action="https://www.google.com/search">
-            <input type="text" name="q">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Google Search</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            background-color: #f5f5f5;
+            text-align: center;
+            height: 100vh;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+        }
+        h1{
+            color: #282727;
+        }
+        .top-links {
+            position: absolute;
+            top: 10px;
+            right: 10px;
+            margin-top: 10px;
+        }
+        .top-links a {
+            margin-left: 15px;
+            text-decoration: none;
+            color: #1a73e8;
+        }
+        .top-links a:hover {
+            color: #0f59d1;
+            border-radius: 4px;
+            border:1px solid;
+            padding: 8px;
+        }
+        input[type="text"] {
+            width: 400px;
+            padding: 10px;
+            border-radius: 20px;
+            border: 1px solid #ccc;
+        }
+        .buttons {
+            margin-top: 10px;
+        }
+        .buttons input[type="submit"] {
+            padding: 10px 20px;
+            border: none;
+            background-color: #1a73e8;
+            color: white;
+            border-radius: 4px;
+            cursor: pointer;
+            display: inline-block;
+            margin-right: 10px; 
+        }
+        .buttons input[type="submit"]:hover {
+            background-color: #0f59d1;
+        }
+    </style>
+</head>
+<body>
+    <div class="top-links">
+        <a href="images.html"> Image Search</a>
+        <a href="advanced.html">Advanced Search</a>
+    </div>
+    <h1>Google Search</h1>
+    <form action="https://www.google.com/search">
+        <input type="text" name="q" placeholder="Enter your search...">
+        <br>
+        <div class="buttons">
             <input type="submit" value="Google Search">
-        </form>
-    </body>
+            <input type="submit" onclick="this.form.action='https://www.google.com/search?btnI=1';" value="I'm lucky">
+        </div>
+    </form>
+</body>
 </html>
